<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/direct_seeding_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kf_calling_linear"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/direct_seeding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/very_satisfaction"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_return_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kf_calling_linear"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/call_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/satisfaction"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ordinary_call_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kf_calling_linear"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ordinary_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/not_satisfaction"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kf_calling_linear"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/cancel"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>