<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/chatting_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:textSize="10sp"/>

    <RelativeLayout
        android:id="@+id/chart_from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/chatting_time_tv"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="48dp">

        <ImageView
            android:id="@+id/chatting_avatar_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/kf_head_default_robot"/>

        <TextView
            android:id="@+id/chatfrom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:text="@string/name"
            android:textColor="@color/all_black"
            android:textSize="10sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/kf_chat_rich_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chatfrom_tv_name"
            android:background="@drawable/kf_chatfrom_bg_normal"
            android:layout_toRightOf="@id/chatting_avatar_iv"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/kf_chat_rich_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/all_black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/titlename"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                />
            <LinearLayout
                android:id="@+id/kf_chat_rich_tv_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <TextView
                    android:id="@+id/kf_chat_rich_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:text="@string/content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    />
                <ImageView
                    android:id="@+id/kf_chat_rich_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <TextView
        android:id="@+id/chatting_withdraw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatting_time_tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:text="@string/writedrown_msg"
        android:textSize="12sp"
        android:visibility="gone"/>

</RelativeLayout>