<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:id="@+id/chat_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#F4F6F7">

        <TextView
            android:id="@+id/chat_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/logout"
            android:textColor="#0C6BFE"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/other_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxEms="14"
            android:maxLines="1"
            android:text="@string/wait_link"
            android:textColor="@color/all_black"
            android:textSize="14sp"
            tools:text="容联七陌科技有限公司欢迎您使用在线客服" />

        <TextView
            android:id="@+id/chat_tv_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/topeople"
            android:textColor="#0C6BFE"
            android:textSize="16sp" />

    </RelativeLayout>



    <!--最下面输入的bar-->
    <LinearLayout
        android:id="@+id/bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:visibility="visible"
            android:background="@color/kf_hint_view"
            android:id="@+id/ll_hintView"
            android:paddingLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <Button
                android:id="@+id/chat_set_mode_voice"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/kf_icon_chat_voice"
                android:visibility="visible" />

            <Button
                android:id="@+id/chat_set_mode_keyboard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/kf_chatting_setmode_keyboard_btn"
                android:visibility="gone" />

            <com.m7.imkfsdk.recordbutton.AudioRecorderButton
                android:id="@+id/chat_press_to_speak"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:background="@drawable/kf_btn_recorder_normal"
                android:gravity="center"
                android:text="@string/recorder_normal"
                android:textColor="#727272"
                android:visibility="gone">


            </com.m7.imkfsdk.recordbutton.AudioRecorderButton>

            <RelativeLayout
                android:id="@+id/chat_edittext_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@drawable/kf_input_bar_bg_normal"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/chat_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:background="@null"
                    android:maxLines="4"
                    android:minHeight="40dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="3dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="3dp"
                    android:textColor="@color/all_black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/chat_emoji_normal"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kf_icon_chat_emoji_normal"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/chat_emoji_checked"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="1dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/kf_icon_chat_emoji_checked"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/chat_more"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/kf_icon_chattype_add" />

            <Button
                android:id="@+id/chat_send"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/kf_chat_send_btn_selector"
                android:text="@string/send"
                android:textColor="#666666"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- 表情图片 -->

            <RelativeLayout
                android:id="@+id/chat_face_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.v4.view.ViewPager
                    android:id="@+id/chat_emoji_vPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/chat_iv_image_face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/chat_more_container"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:visibility="visible">

                <android.support.v4.view.ViewPager
                    android:id="@+id/chat_more_vPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/chat_iv_image_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"></LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bar_bottom"
        android:layout_below="@id/chat_title"
        android:background="@color/chatlist_bg">

        <com.m7.imkfsdk.view.ChatListView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@null"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:listSelector="#00000000"
            android:scrollbarStyle="outsideOverlay"
            android:transcriptMode="normal" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/chat_queue_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_title"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/lightgrey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/chat_queue_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />


    </LinearLayout>
</RelativeLayout>